<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expenses</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_expense_items">Expense category</string>
    <string name="new_expense_item">New category</string>
    <string name="expense_statistic">Expense summary</string>
    <string name="quit_application">Quit application</string>
    <string name="et_expense_item_name_hint">Add name</string>

    <color name="col_expense_item">#555555</color>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ci_food">Food</string>
    <string name="ci_household">Household costs</string>
    <string name="ci_clothes">Clothing and Accessories</string>
    <string name="ci_accommodation">Bill payment</string>
    <string name="ci_credit">Loan payment</string>
    <string name="ci_car">Car payment</string>
    <string name="ci_health">Health Services and Medicine</string>
    <string name="ci_restaurant">Restaurants</string>
    <string name="ci_mobile">Mobile phone payment</string>
    <string name="ci_entertainment">Entertainment and Travel</string>
    <string name="ci_other">Other</string>

    <color name="col_activity_background">#E7EBF2</color>
    <color name="col_expense_item_cell_background">#FFFFFF</color>

    <string name="price_label">Total amount</string>
    <string name="title_activity_price_list">Expense item: </string>
    <string name="price_hint">Expense</string>
    <string name="date_label">Date</string>
    <string name="currency_hint">Currency</string>
    <string name="comment_label">Comment</string>
    <string name="comment_hint">Add comment</string>
    <string name="tag_label">Tag</string>
    <string name="tag_hint">Add tag</string>
    <string name="save_label">Save</string>
    <string name="history_label">History of operations</string>
    <string name="new_record_label">Record an expense</string>
    <string name="close">Close</string>
    <string name="price_warning">Enter amount</string>

    <color name="col_price_val">#725998</color>
    <color name="col_price_list_item_back">#FFFF66</color>
    <color name="col_date_val">#808080</color>
    <color name="col_price_list_item_split_line">#E5E5E5</color>
    <color name="col_tag_text">#3B5958</color>
    <color name="col_tag_back">#EDEFF4</color>
    <color name="col_count_val">#686868</color>
    <color name="col_white">#FFFFFF</color>
    <color name="col_black">#000000</color>
    <color name="col_yellow">#f3ae1b</color>
    <color name="col_light_gray">#AAAAAA</color>
    <color name="col_list_view_header_back">#3B5998</color>
    <color name="col_list_view_header_text">#FFFFFF</color>
    <color name="col_blue">#0000FF</color>
    <color name="col_red">#FF0000</color>

    <string name="s_history_of_expenses">History of expenses</string>
    <string name="title_activity_statistic_report">Expense summary</string>
    <string name="s_daily_expenses">Daily expenses</string>
    <string name="s_monthly_expenses">Monthly expenses</string>
    <string name="s_weekly_expenses">Weekly expenses</string>
    <string name="s_yearly_expenses">Yearly expenses</string>
    <string name="s_whole_expenses">All expenses</string>
    <string name="s_period_expenses">Select Period</string>
    <string name="s_daily_expenses_tag">Daily expenses (tag)</string>
    <string name="s_monthly_expenses_tag">Monthly expenses (tag)</string>
    <string name="s_weekly_expenses_tag">Weekly expenses (tag)</string>
    <string name="s_yearly_expenses_tag">Yearly expenses (tag)</string>
    <string name="s_whole_expenses_tag">All expenses (tag)</string>
    <string name="s_period_expenses_tag">Select Period (tag)</string>
    <string name="s_title_activity_backup">Backup data</string>
    <string name="s_backup_intro">Please create an account in Dropbox (www.dropbox.com ) in order to backup your data and link your account here</string>
    <string name="s_btn_login_dropbox">Open Dropbox</string>
    <string name="s_btn_logout_dropbox">Close Dropbox</string>
    <string name="s_btn_backup_into_dropbox">Copy data into Dropbox</string>
    <string name="s_btn_restore_from_dropbox">Restore data from Dropbox</string>
    <string name="s_msg_dropbox_backup_ok">Backup completed successfully</string>
    <string name="s_msg_dropbox_restore_ok">Your data has been successfully restored</string>
    <string name="s_msg_uploading">Uploading&#8230;</string>
    <string name="s_msg_downloading">Downloading&#8230;</string>
    <string name="s_msg_importing">Import&#8230;</string>
    <string name="s_msg_no_data_for_backuping">There is no data for backup</string>
    <string name="s_msg_no_backup_files_in_dropbox">There is no backup data in your Dropbox account</string>
    <string name="s_dropbox_file_list">List of files in Dropbox</string>
    <string name="s_msg_dropbox_download_ok">Download completed successfully</string>
    <string name="s_msg_confirm_restore">Are you sure you want to restore data from file </string>
    <string name="s_msg_list_available_backups">Downloading list of available backups</string>
    <string name="s_err_unknown_error">Unknown error. Please try again.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="change_category">Change category</string>
    <string name="warning_del_category">Are you sure you want to delete %s?</string>
    <string name="warning">Attention</string>
    <string name="tv_placeholder">placeholder</string>
    <string name="dropbox">Dropbox</string>
    <string name="bytes">bytes</string>
    <string name="move">Move</string>
    <string name="s_move_to">Move expenses from %s to:</string>
    <string name="s_move_item_to">Move %s to:</string>
    <string name="warning_move_category">Move all expenses from %1$s to %2$s ?</string>
    <string name="warning_move_item">Move %1$s to %2$s ?</string>
    <string name="stat_report">Statistics of import</string>
    <string name="stat_ci_total">All categories</string>
    <string name="stat_ci_error">Error (in categories)</string>
    <string name="stat_ci_ignored">Found categories</string>
    <string name="stat_ci_new">Added categories</string>
    <string name="stat_ci_overwritten">Updated categories</string>
    <string name="stat_cir_total">All expenses</string>
    <string name="stat_cir_error">Error (in expenses)</string>
    <string name="stat_cir_ignored">Found expenses</string>
    <string name="stat_cir_new">Added expenses</string>
    <string name="stat_cir_overwritten">Updated expenses</string>
    <string name="ok">OK</string>
    <string name="hour">hour(s)</string>
    <string name="hour_disable">(0 - disable backup copy)</string>
    <string name="title_activity_backup_configuration">Backup configuration</string>
    <string name="backup_config_text">Backup data into Dropbox automatically every:</string>
    <string name="label_period">Period</string>
    <string name="label_days_interval">Select days</string>
    <string name="label_period_whole">(0 - whole period)</string>
    <string name="label_select_category">Select categories</string>
    <string name="label_select_statistic">Select statistics</string>
    <string name="label_select_all">Select all</string>
    <string name="title_activity_statistic_details">Expense summary</string>
    <string name="action_settings">Settings</string>
    <string name="label_overflow">Go to</string>
    <string name="expense_export">Export Dropbox</string>
    <string name="income">Income</string>
</resources>