<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/col_activity_background"
    android:gravity="center_horizontal" >

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_dlg_header"
        android:gravity="center"
        android:text="@string/tv_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/col_list_view_header_text"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_header"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_header"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/icon"
        android:hint="@string/tv_placeholder"
        android:textColor="@color/col_black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_confirm"
            style="@style/GradientButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/green_gradient"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/GradientButtonText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/green_gradient"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>