<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/col_activity_background" >

    <TextView
        android:id="@+id/tvDlgExpenseCatMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_dlg_header"
        android:gravity="center"
        android:text="@string/tv_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/col_list_view_header_text"
        android:textStyle="bold" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_edit_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDlgExpenseCatMenu"
        android:background="@drawable/background_pressed_yellow"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="2dp" >

        <ImageView
            android:id="@+id/menu_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_edit_2" />

        <TextView
            android:id="@+id/tv_menu_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/edit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_move_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_edit_layout"
        android:background="@drawable/background_pressed_yellow"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="2dp" >

        <ImageView
            android:id="@+id/menu_move_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_move" />

        <TextView
            android:id="@+id/tv_menu_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/move"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_del_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_move_layout"
        android:background="@drawable/background_pressed_yellow"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="2dp" >

        <ImageView
            android:id="@+id/menu_del_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tv_menu_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/delete"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>